examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__multi_line_strings.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                String(
                                    String {
                                        children: [
                                            StringStart(
                                                StringStart {
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                            StringEnd(
                                                StringEnd {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                String(
                                    String {
                                        children: [
                                            StringStart(
                                                StringStart {
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                            StringEnd(
                                                StringEnd {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                String(
                                    String {
                                        children: [
                                            StringStart(
                                                StringStart {
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                            StringEnd(
                                                StringEnd {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                String(
                                    String {
                                        children: [
                                            StringStart(
                                                StringStart {
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                            StringEnd(
                                                StringEnd {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                String(
                                    String {
                                        children: [
                                            StringStart(
                                                StringStart {
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                            StringEnd(
                                                StringEnd {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                String(
                                    String {
                                        children: [
                                            StringStart(
                                                StringStart {
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                            StringEnd(
                                                StringEnd {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                String(
                                    String {
                                        children: [
                                            StringStart(
                                                StringStart {
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [
                                                        EscapeSequence(
                                                            EscapeSequence {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        EscapeSequence(
                                                            EscapeSequence {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        EscapeSequence(
                                                            EscapeSequence {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        EscapeSequence(
                                                            EscapeSequence {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        EscapeSequence(
                                                            EscapeSequence {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        EscapeSequence(
                                                            EscapeSequence {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                            StringEnd(
                                                StringEnd {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
