examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__other_primitives.snap
---
source: examples/ast-python/src/tests/corpus/literals.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 3,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 5,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 17,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 4,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 5,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 4,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                True(
                    True {
                        _range: Range {
                            start_byte: 1,
                            end_byte: 5,
                            start_point: Point {
                                row: 1,
                                column: 0,
                            },
                            end_point: Point {
                                row: 1,
                                column: 4,
                            },
                        },
                        _id: 2,
                        _parent: Some(
                            1,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 4,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 6,
                        end_byte: 11,
                        start_point: Point {
                            row: 2,
                            column: 0,
                        },
                        end_point: Point {
                            row: 2,
                            column: 5,
                        },
                    },
                    _id: 3,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                False(
                    False {
                        _range: Range {
                            start_byte: 6,
                            end_byte: 11,
                            start_point: Point {
                                row: 2,
                                column: 0,
                            },
                            end_point: Point {
                                row: 2,
                                column: 5,
                            },
                        },
                        _id: 4,
                        _parent: Some(
                            3,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 6,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 12,
                        end_byte: 16,
                        start_point: Point {
                            row: 3,
                            column: 0,
                        },
                        end_point: Point {
                            row: 3,
                            column: 4,
                        },
                    },
                    _id: 5,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                None(
                    None {
                        _range: Range {
                            start_byte: 12,
                            end_byte: 16,
                            start_point: Point {
                                row: 3,
                                column: 0,
                            },
                            end_point: Point {
                                row: 3,
                                column: 4,
                            },
                        },
                        _id: 6,
                        _parent: Some(
                            5,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
    ],
}
