examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__other_primitives@True.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                True(
                                    True {
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
